fix dto auth
