# services/catalog-service/src/main/java/com/example/marketplace/catalog/auth/dto/LoginRequest.java
@@ -1,28 +1,0 @@
-package com.example.marketplace.catalog.auth.dto;
-
-import jakarta.validation.constraints.NotBlank;
-
-public class LoginRequest {
-
-    @NotBlank(message = "email обязателен")
-    private String email;
-
-    @NotBlank(message = "password обязателен")
-    private String password;
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getPassword() {
-        return password;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-}
